--- a/Defesa-Mestrado-Camunda/defesa-mestrado/pom.xml
+++ b/Defesa-Mestrado-Camunda/defesa-mestrado/pom.xml
@@ -86,6 +86,22 @@
       <version>42.7.5</version>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>io.github.cdimascio</groupId>
+      <artifactId>dotenv-java</artifactId>
+      <version>2.2.4</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.genai</groupId>
+      <artifactId>google-genai</artifactId>
+      <version>1.2.0</version>
+    </dependency>
 
   </dependencies>
 
