--- a/Defesa-Mestrado-Camunda/defesa-mestrado/pom.xml
+++ b/Defesa-Mestrado-Camunda/defesa-mestrado/pom.xml
@@ -102,6 +102,14 @@
       <artifactId>google-genai</artifactId>
       <version>1.2.0</version>
     </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter</artifactId>
+    </dependency>
 
   </dependencies>
 
